--- a/slidde/slidde.css
+++ b/slidde/slidde.css
@@ -2,16 +2,16 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    padding: 3px;
 }
 img{
     max-width: 100%;
 }
 .container-all{
-    position: relative;
+    position: absolute;
     max-width: 1000px;
     width: 100%;
-    border-radius: 6px;
+    border-radius: 3px;
     overflow: hidden;
 }
 .slide{
