--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p {
 }
 
 .content {
-    height: 30%;
+    height: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -102,57 +102,185 @@ p {
 
 .sau {
     padding: 60px;
-    background-image: url(imagenes/1x/fondo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background: #101010;
 }
 
-.box-container {
+.contenedor1{
+    width: 30%;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    text-align: center;
-
+    justify-content: left 20px;
+    align-items: left;
+    height: 20vh;
 }
-
-.box-container .box1 {
-    min-height: 40%;
-    min-width: 28%;
-    margin: 2.5%;
-    border-radius: 20px;
-    background: #101010;
-    border: none;
-    transition: 0.5s;
+.contenedor1 figure{
+   position:relative;
+    height: 600px;
     cursor: pointer;
-    border-color:#516ba1
+    width: 300px;
+    overflow: hidden;
+    border-radius: 0px;
+    box-shadow: 0px;
 }
-.box-container .box1 .capa1 {
+.contenedor1 figure img{
     width: 100%;
+    height: 100%;
+    transition: all 400ms ease-out;
+    will-change: transform;
 }
-.box-container .box2 {
-    min-height: 30%;
-    min-width: 25%;
-    margin: 2.5%;
-    border-radius: 20px;
-    background: #101010;
-    border: none;
-    border-color: #516ba1;
-    transition: 0.5s;
-    cursor: pointer;
-    border-color:#516ba1
+.contenedor1 figure .capa1{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,103,123,0.7);
+    transition: all 400ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
 }
-.box-container .box3 {
-    min-height: 30%;
-    min-width: 25%;
-    margin: 2.5%;
-    border-radius: 20px;
-    background: #101010;
-    border: none;
-    transition: 0.5s;
+.contenedor1 figure:hover > .capa1 {
+    opacity: 1;
+    visibility: visible;
+}
+.contenedor1 figure:hover > .capa1 h3{
+    margin-top: 70px;
+    margin-bottom: 15px;
+}
+.contenedor1 figure:hover > img{
+    transform: scale(1.3);
+}
+.contenedor1 figure .capa1 h3{
+    color: #fff;
+    font-weight: 400;
+    margin-bottom: 120px;
+    transition: all 400ms ease-out;
+    margin-top: 30px;
+}
+.contenedor1 figure .capa1 p{
+    color: #fff;
+    font-size: 15px;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 220px;
+    margin: auto;
+}
+.contenedor2{
+    width: 0%;
+    display:flex;
+    justify-content: right;
+    height: 20vh;
+    margin-top: -130px
+}
+.contenedor2 figure{
+   position:relative;
+    height: 300px;
     cursor: pointer;
-    border-color:#516ba1
+    width: 300px;
+    overflow: hidden;
+    border-radius: 0px;
+    box-shadow: 0px;
+}
+.contenedor2 figure img{
+    width: 100%;
+    height: 100%;
+    transition: all 400ms ease-out;
+    will-change: transform;
+}
+.contenedor2 figure .capa2{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(42, 14, 168, 0.7);
+    transition: all 400ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+}
+.contenedor2 figure:hover > .capa2 {
+    opacity: 1;
+    visibility: visible;
+}
+.contenedor2 figure:hover > .capa2 h3{
+    margin-top: 70px;
+    margin-bottom: 15px;
+}
+.contenedor2 figure:hover > img{
+    transform: scale(1.3);
+}
+.contenedor2 figure .capa2 h3{
+    color: #fff;
+    font-weight: 400;
+    margin-bottom: 120px;
+    transition: all 400ms ease-out;
+     margin-top: 30px;
+}
+.contenedor2 figure .capa2 p{
+    color: #fff;
+    font-size: 15px;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 220px;
+    margin: auto;
+}
+.contenedor3{
+    width: 142%;
+    display:flex;
+    justify-content: right;
+    height: 20vh;
+    margin-top: -130px
+}
+.contenedor3 figure{
+   position:relative;
+    height: 300px;
+    cursor: pointer;
+    width: 300px;
+    overflow: hidden;
+    border-radius: 0px;
+    box-shadow: 0px;
+}
+.contenedor3 figure img{
+    width: 100%;
+    height: 100%;
+    transition: all 400ms ease-out;
+    will-change: transform;
+}
+.contenedor3 figure .capa3{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,103,123,0.7);
+    transition: all 400ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+   text-align: center;
+}
+.contenedor3 figure:hover > .capa3 {
+    opacity: 1;
+    visibility: visible;
+}
+.contenedor3 figure:hover > .capa3 h3{
+    margin-top: 70px;
+    margin-bottom: 15px;
+}
+.contenedor3 figure:hover > img{
+    transform: scale(1.3);
+}
+.contenedor3 figure .capa3 h3{
+    color: #fff;
+    font-weight: 400;
+    margin-bottom: 120px;
+    transition: all 400ms ease-out;
+     margin-top: 30px;
+}
+.contenedor3 figure .capa3 p{
+    color: #fff;
+    font-size: 15px;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 220px;
+    margin: auto;
 }
 .box-container .box4 {
     height: 40%;
@@ -185,30 +313,7 @@ p {
 
 }
 /*sombra de las cajas*/
-.box-container .box1:hover{
-    cursor: pointer;
-    transform: scale(1.1);
-    background: #516ba1;
-    color: #000;
-    z-index: 2;
-    box-shadow: 2px 2px 2px #000;
-}
-.box-container .box2:hover{
-    cursor: pointer;
-    transform: scale(1.1);
-    background: #516ba1;
-    color: #000;
-    z-index: 2;
-    box-shadow: 2px 2px 2px #000;
-}
-.box-container .box3:hover{
-    cursor: pointer;
-    transform: scale(1.1);
-    background: #516ba1;
-    color: #000;
-    z-index: 2;
-    box-shadow: 2px 2px 2px #000;
-}
+
 /*diseño de las letras*/
 .box-container .box1 h3 {
     font-size: 20px;
