--- a/estiloindex.css
+++ b/estiloindex.css
@@ -564,22 +564,89 @@ h2{
     font-weight: normal;
     text-align: center;
 }
-.cuadro1{
-    width: 80%;
-    height: 60%;
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+    font-family: 'Montserrat', sans-serif;
 }
-.cuadro2{
-    width: 80%;
-    height: 60%;
+/*Cards*/
+.container-card{
+	width: 100%;
+	display: flex;
+	max-width: 1100px;
+	margin: 10px;
+    
 }
-.cuadro3{
-    flex-direction: column;
-    display: flex;
-    align-items: left;
-    width: 40%;
-    height: 20%;
-    background: #516ba1;
+.title-cards{
+	width: 100%;
+	max-width: 1080px;
+	margin: auto;
+	padding: 20px;
+	margin-top: 20px;
+	text-align: center;
+	color: #7a7a7a;
 }
+.card{
+	width: 100%;
+	margin: 20px;
+	border-radius: 6px;
+	background:#fff;
+	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+	transition: all 400ms ease-out;
+	cursor: default;
+    overflow: hidden;
+}
+.card:hover{
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+	transform: translateY(-3%);
+}
+.card img{
+	width: 100%;
+	height: 210px;
+}
+.card .contenido-card{
+	padding: 10px;
+	text-align:center;
+    line-height: normal;
+    
+}
+.card .contenido-card h3{
+	font-weight: 1000;
+    margin-bottom: 15px;
+	color: #7a7a7a;
+}
+.card .contenido-card p{
+    color: #6a6a6a;
+	font-size: 20px;
+    text-align: center;
+	margin-left: 2px;
+}
+.card .contenido-card a{
+	display: inline-block;
+	padding: 10px;
+	margin-top: 10px;
+	text-decoration: none;
+	color: #2fb4cc;
+	border: 1px solid #2fb4cc;
+	border-radius: 4px;
+	transition: all 400ms ease;
+	margin-bottom: 5px;
+}
+.card .contenido-card a:hover{
+	background: #2fb4cc;
+	color: #fff;
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+	.container-card{
+		flex-wrap: wrap;
+	}
+	.card{
+		margin: 15px;
+	}
+}
+/*Fin-Cards*/
 .slidemarcas{
     height: 20%;
     display: flex;
@@ -593,23 +660,70 @@ h2{
     text-align: center;
 }
 
-.ubicacion{
-    height: 10%;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
+/*:::::Pie de Pagina*/
+.pie-pagina{
+    width: 100%;
+    background-color: #0a141d;
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    align-items:center;
-    background: #171717;
+    justify-content: center;
+    align-items: center;
 }
-.contact {
-    padding-top: 50px;
-    background: #171717;
-    padding-bottom: 0;
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
 }
-
-.li{
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
     text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #0d2033;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: aqua;
 }
 
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 35px 0px;
+    }
+}
 
 @media (max-width: 768px) {
 
@@ -624,3 +738,4 @@ h2{
    
     
 }
+
