--- a/estiloindex.css
+++ b/estiloindex.css
@@ -576,8 +576,6 @@ h2{
 	width: 100%;
 	display: flex;
 	max-width: 1100px;
-	margin: 10px;
-    
 }
 .title-cards{
 	width: 100%;
@@ -589,14 +587,14 @@ h2{
 	color: #7a7a7a;
 }
 .card{
-	width: 100%;
-	margin: 20px;
-	border-radius: 6px;
-	background:#fff;
-	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
-	transition: all 400ms ease-out;
-	cursor: default;
+    width: 100%;
+    margin: 20px;
+    border-radius: 6px;
     overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    cursor: default;
+    transition: all 400ms ease;
 }
 .card:hover{
 	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
@@ -606,46 +604,24 @@ h2{
 	width: 100%;
 	height: 210px;
 }
-.card .contenido-card{
-	padding: 10px;
+.card .contenido{
+	padding: 100px;
 	text-align:center;
-    line-height: normal;
-    
 }
 .card .contenido-card h3{
 	font-weight: 1000;
     margin-bottom: 15px;
 	color: #7a7a7a;
 }
+.card .contenido-card li{
+    text-decoration: none;
+    font-size: 20px;
+}
 .card .contenido-card p{
-    color: #6a6a6a;
-	font-size: 20px;
-    text-align: center;
-	margin-left: 2px;
+    color: #000;
 }
-.card .contenido-card a{
-	display: inline-block;
-	padding: 10px;
-	margin-top: 10px;
-	text-decoration: none;
-	color: #2fb4cc;
-	border: 1px solid #2fb4cc;
-	border-radius: 4px;
-	transition: all 400ms ease;
-	margin-bottom: 5px;
-}
-.card .contenido-card a:hover{
-	background: #2fb4cc;
-	color: #fff;
-}
-@media only screen and (min-width:320px) and (max-width:768px){
-	.container-card{
-		flex-wrap: wrap;
-	}
-	.card{
-		margin: 15px;
-	}
-}
+
+
 /*Fin-Cards*/
 .slidemarcas{
     height: 20%;
