--- a/estiloindex.css
+++ b/estiloindex.css
@@ -81,7 +81,7 @@ li{
     margin-bottom: 40px;
     font-size: 60px;
     font-weight: 600;
-    text-transform: uppercase;
+    text-align: right;
     color: #fff;
 }
 
@@ -634,7 +634,6 @@ h2{
     background-size: cover;
     text-align: center;
 }
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 *{
     margin: 0;
@@ -688,7 +687,7 @@ h2{
     transition: all 300ms ease;
 }
 .pie-pagina .grupo-1 .red-social a:hover{
-    color: aqua;
+    color: rgb(0, 1, 7);
 }
 
 @media screen and (max-width:800px){
