--- a/slideriniciogrande.css
+++ b/slideriniciogrande.css
@@ -3,22 +3,24 @@
 }
 body {
     font-family: Verdana, sans-serif; margin:0;
-    background: ;
+    background: #101010;
 }
 .mySlides {
     display: none
 }
 img {
     vertical-align: middle;
+    position: relative;
 }
 
 /* Slideshow container */
 
 .slideshow-container {
-  max-width: 77.1vw;
-  height: 60vw;
+  width: 1320px;
+  height: 300px;
   position: relative;
-  margin: auto;
+  margin: 15px;
+  margin-top: -9px;
 }
 
 /* Next & previous buttons */
@@ -40,6 +42,10 @@ img {
 /* Position the "next button" to the right */
 .next {
   right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev{
+  left:0;
   border-radius: 3px 0 0 3px;
 }
 
