--- a/estiloindex.css
+++ b/estiloindex.css
@@ -78,10 +78,10 @@ li{
 }
 
 .title {
-    margin-bottom: 40px;
+    margin-left: 40px;
     font-size: 60px;
     font-weight: 600;
-    text-align: right;
+    text-align: center;
     color: #fff;
 }
 
@@ -606,7 +606,8 @@ h2{
 .card .contenido-card h3{
 	font-weight: 1000;
     margin-bottom: 15px;
-	color: #7a7a7a;
+	color: #000;
+    text-align: center;
 }
 .card .contenido-card li{
     text-decoration: none;
