--- a/panel_control.css
+++ b/panel_control.css
@@ -70,13 +70,34 @@ body{
     float: right;
 }
 .agregar-producto {
-    width: 40000px;
-    background: #24303c;
+    width: 400px;
+    background: #516ba1;
     padding: 30px;
-    margin: auto;
+    margin: 600px;
     margin-top: 100px;
     border-radius: 4px;
     font-family: 'calibri';
-    color: white;
+    color: black;
     box-shadow: 7px 13px 37px #000;
+  }
+.agregar-producto h3 {
+color: white;  
+}
+.agregar-producto button{
+    width: 100%;
+    background: #1f53c5;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+}
+.controls{
+    width: 100%;
+    background: #f2f3f5;
+    margin-bottom: 16px;
+    border: 1px solid #1f53c5;
+    font-family: 'calibri';
+    font-size: 18px;
+    color: white;
   }
