--- a/editar.css
+++ b/editar.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Yesteryear&display=swap');
-
 
 *{
 	box-sizing: border-box;
@@ -47,7 +45,6 @@ body{
     text-transform: uppercase;
     font-size: 15px;
 }
-
 .head a{
     text-decoration: none;
     color:white;
@@ -59,11 +56,11 @@ a:hover {
     background: #3f3f3f;
 }
 header{
-	margin-bottom: 20;
+	margin-bottom: 40;
 	margin: 0 auto;
 	background: #1101f3;
 	text-align: center;
-	font-size: 10px;
+	font-size: 20px;
 }
 
 h1{
@@ -162,7 +159,6 @@ button{
 button:hover {
 	background: #504d97;
 }
-
 @media only screen and (max-width: 800px){
 	/* Do 800 */
 	header{
@@ -214,64 +210,16 @@ button:hover {
 	#main-container{
 		width: 50%;
 	}
-
-
 }
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background: #516ba1;
-  }
-  .datos{
-    width: 900px;
-    height: 600px;
-    background: #24303c;
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 14px;
-    font-family: 'calibri';
-    color: white;
-    box-shadow: 7px 13px 37px #000;
-  }
-  .datos button{
-    width: 100%;
-    background: #1f53c5;
-    border: none;
-    padding: 12px;
-    color: white;
-    margin: 20px 0;
-    font-size: 16px;
-  }
-  .datos a{
-    color: white;
-    text-decoration: none;
-  }
-  .datos a:hover {
-    color: white;
-    text-decoration: underline;
-  }
-  .datos p{
-	font-size: 25px;
-	color: white;
-  }
-  .selec{
-	width: 900px;
-    height: 600px;
-    background: #24303c;
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 14px;
-    font-family: 'calibri';
-    color: white;
-    box-shadow: 7px 13px 37px #000;
-  }
-  .selec p{
-	font-size: 20px;
-	color:white;
-  }
+h2{
+
+        padding-top: 0.4em;
+        padding-bottom: .3em;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: normal;
+        font-size: 1.6em;
+        text-shadow: 0 0.083em 0.083em rgba(18, 18, 20, 0.6);
+    
+    
+}
