--- a/diseñodesafprod.css
+++ b/diseñodesafprod.css
@@ -98,4 +98,15 @@
     color: white;
     text-decoration: underline;
   }
- 
+ .selec{
+  width: 400px;
+    height: 300px;
+    background: #24303c;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px;
+    font-family: 'calibri';
+    color: white;
+    box-shadow: 7px 13px 37px #000;
+ }
