--- a/editar.css
+++ b/editar.css
@@ -159,6 +159,7 @@ button{
 button:hover {
 	background: #504d97;
 }
+
 @media only screen and (max-width: 800px){
 	/* Do 800 */
 	header{
@@ -222,4 +223,10 @@ h2{
         text-shadow: 0 0.083em 0.083em rgba(18, 18, 20, 0.6);
     
     
+}
+.title {
+    font-size: 60px;
+    font-weight: 600;
+    text-align:center;
+    color: #fff;
 }
