--- a/estiloindex.css
+++ b/estiloindex.css
@@ -62,6 +62,9 @@ li{
 }
 
 .navbar a:hover {
+    align-items: center;
+    display: flex;
+    justify-content: center;
     width: 15%;
     background: #3f3f3f;
     
