--- a/estiloindex.css
+++ b/estiloindex.css
@@ -663,22 +663,31 @@ h2{
     padding: 45px 0px;
 }
 .pie-pagina .grupo-1 .box figure{
-    width: 100%;
-    height: 100%;
+    width: 120%;
+    height: 120%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .pie-pagina .grupo-1 .box figure img{
-    width: 250px;
+    width: 300px;
 }
 .pie-pagina .grupo-1 .box h2{
     color: #fff;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
+    margin-left: -220px;
     font-size: 20px;
+}
+.pie-pagina .grupo-1 .box h4{
+    color: #efefef;
+    margin-left: -5px;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 .pie-pagina .grupo-1 .box p{
     color: #efefef;
+    margin-left: -100px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
 .pie-pagina .grupo-1 .red-social a{
@@ -699,7 +708,7 @@ h2{
 
 @media screen and (max-width:800px){
     .pie-pagina .grupo-1{
-        width: 90%;
+        width: 100%;
         grid-template-columns: repeat(1, 1fr);
         grid-gap:30px;
         padding: 35px 0px;
@@ -718,5 +727,25 @@ h2{
     }
    
     
+}
+.prov{
+   
+    display: flex;
+    padding: 20px;
+    background: #171717;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.c1{
+    border: 1px solid rgb(70,69,69);
+    background-color:#fff;
+    color: #000;
+    width: 120px;
+    height: 120px;
+    margin: 5px;
+   
 }
 
