--- a/tablaempleado.css
+++ b/tablaempleado.css
@@ -1,10 +1,10 @@
 body{
-	background-color: #516ba1;
+	background-color: #fff;
 	font-family: Arial;
 }
 
 #main-container{
-	margin: 15px auto;
+	margin: 5px auto;
 	width: 300px;
 }
 
@@ -12,7 +12,8 @@ table{
 	background-color: white;
 	text-align: left;
 	border-collapse: collapse;
-	width: 100%;
+	width: 60%;
+    margin-left: 350px;
 }
 
 th, td{
@@ -39,16 +40,16 @@ tr:hover td{
     background: #dce6f0;
     padding: 10px;
     border-radius: 4px;
-    margin-bottom: 16px;
+    margin-left: 400px;
     border: 1px solid #1f53c5;
     font-family: 'calibri';
     font-size: 18px;
     color: black;
   }
   h3{
-    margin-top: 100px;
-    margin-bottom: 10px;
-	color: white;
+   
+    margin-left: 400PX;
+	color: black;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 25px;
   }
@@ -60,8 +61,8 @@ tr:hover td{
     border: none;
     padding: 12px;
     color: white;
-    margin-top: -75px;
-    margin-left: 0px;
+    margin-top: -58px;
+    margin-left: 869px;
     font-size: 16px;
  }
  .titulo h1{
