--- a/tablacarrito.css
+++ b/tablacarrito.css
@@ -78,3 +78,28 @@ tr:hover td{
  text-transform: uppercase;
  font-size: 15px;
  }
+ .abajo button{
+      margin-top: 3em;
+      margin-bottom: 3em;
+      width: 20%;
+      height: 3em;
+      border-radius: 1.5em;
+      border: none;
+      background-color: #1101f3;
+      color: white;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.5s;
+   }
+   .abajo button a{
+      color: white ;
+   }
+   button:hover {
+      background: #504d97;
+   }
+h1{
+   margin-left: 600px;
+   font-size: 30px;
+   color: #000;
+}
