--- a/droga/estilocards.css
+++ b/droga/estilocards.css
@@ -13,7 +13,6 @@
 .container1 figure{
     position:absolute;
      height: 540px;
-     cursor: pointer;
      width: 310px;
      overflow: hidden;
      border-radius: 0px;
@@ -66,85 +65,81 @@
      color: #fff;
  }
  .box2{
-    width: 270px;
+    width: 540px;
     height: 310px;
-    margin-top: 30px;
+    margin: 0px;
     font-size: 20px;
 }
 .container2 figure{
-    position:relative;
+    position:absolute;
      height: 270px;
-     cursor: pointer;
-     width: 310px;
+     width: 330px;
      overflow: hidden;
      border-radius: 0px;
      box-shadow: 0px;
-     margin-left: 350px;
      margin-top: -570px;
-     
+     margin-left: 350px;
  }
  .container2 figure img{
-    width: 100%;
-    height: 100%;
-    transition: all 400ms ease-out;
-    will-change: transform;
-}
-.container2 figure .box2{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: #0B1C6A;
-    transition: all 400ms ease-out;
-    opacity: 0;
-    visibility: hidden;
-    text-align: center;
-}
-.container2 figure:hover > .box2 {
-    opacity: 1;
-    visibility: visible;
-}
-.container2 figure:hover > .box2 h3{
-    margin-top: 70px;
-    margin-bottom: 15px;
-}
-.container2 figure:hover > img{
-    transform: scale(1.3);
-}
-.container2 figure .box2 h3{
-    color: #fff;
-    font-family: 'Cocogoose';
-    font-weight: 20;
-    margin-bottom: 120px;
-    transition: all 400ms ease-out;
-    margin-top: 30px;
-}
-.container2 figure .box2 p{
-    font-size: 1rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0;
-    padding: 0 1rem;
-    vertical-align: middle;
-    position: absolute;
-    color: #fff;
-}
+     width: 100%;
+     height: 100%;
+     transition: all 400ms ease-out;
+     will-change: transform;
+ }
+ .container2 figure .box2{
+     position: absolute;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     background: #0B1C6A;
+     transition: all 400ms ease-out;
+     opacity: 0;
+     visibility: hidden;
+     text-align: center;
+ }
+ .container2 figure:hover > .box2 {
+     opacity: 1;
+     visibility: visible;
+ }
+ .container2 figure:hover > .box2 h3{
+     margin-top: 20px;
+     margin-bottom: 15px;
+ }
+ .container2 figure:hover > img{
+     transform: scale(1.3);
+ }
+ .container2 figure .box2 h3{
+     color: #fff;
+     font-family: 'Cocogoose';
+     font-weight: 20;
+     margin-bottom: 120px;
+     transition: all 400ms ease-out;
+     margin-top: 30px;
+ }
+ .container2 figure .box2 p{
+     font-size: 1rem;
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     margin: 0;
+     padding: 0 1rem;
+     vertical-align: middle;
+     position: absolute;
+     color: #fff;
+ }
  .box3{
-    width: 270px;
+    width: 540px;
     height: 310px;
-    margin-top: 30px;
+    margin: 0px;
     font-size: 20px;
 }
 .container3 figure{
-    position:relative;
+    position:absolute;
      height: 270px;
-     cursor: pointer;
-     width: 310px;
+     width: 330px;
      overflow: hidden;
      border-radius: 0px;
      box-shadow: 0px;
+     margin-top: -300px;
      margin-left: 350px;
-     margin-top: -18px;
-     
  }
  .container3 figure img{
      width: 100%;
@@ -168,8 +163,8 @@
      visibility: visible;
  }
  .container3 figure:hover > .box3 h3{
-     margin-top: 30px;
-     margin-bottom: 10px;
+     margin-top: 20px;
+     margin-bottom: 15px;
  }
  .container3 figure:hover > img{
      transform: scale(1.3);
@@ -200,13 +195,12 @@
 .container4 figure{
     position:absolute;
      height: 540px;
-     cursor: pointer;
      width: 310px;
      overflow: hidden;
      border-radius: 0px;
      box-shadow: 0px;
-     margin-top: -555px;
-     margin-left: 660px;
+     margin-top: -570px;
+     margin-left: 670px;
  }
  .container4 figure img{
      width: 100%;
@@ -262,13 +256,12 @@
 .container5 figure{
     position:absolute;
      height: 270px;
-     cursor: pointer;
-     width: 310px;
+     width: 330px;
      overflow: hidden;
      border-radius: 0px;
      box-shadow: 0px;
-     margin-top: -555px;
-     margin-left: 970px;
+     margin-top: -570px;
+     margin-left: 980px;
  }
  .container5 figure img{
      width: 100%;
@@ -292,7 +285,7 @@
      visibility: visible;
  }
  .container5 figure:hover > .box5 h3{
-     margin-top: 70px;
+     margin-top: 20px;
      margin-bottom: 15px;
  }
  .container5 figure:hover > img{
@@ -324,13 +317,12 @@
 .container6 figure{
     position:absolute;
      height: 270px;
-     cursor: pointer;
-     width: 310px;
+     width: 330px;
      overflow: hidden;
      border-radius: 0px;
      box-shadow: 0px;
-     margin-top: -285px;
-     margin-left: 970px;
+     margin-top: -300px;
+     margin-left: 980px;
  }
  .container6 figure img{
      width: 100%;
@@ -354,7 +346,7 @@
      visibility: visible;
  }
  .container6 figure:hover > .box6 h3{
-     margin-top: 70px;
+     margin-top: 20px;
      margin-bottom: 15px;
  }
  .container6 figure:hover > img{
@@ -376,6 +368,114 @@
      vertical-align: middle;
      position: absolute;
      color: #fff;
+ }
+ .container1 figure button{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: 'Cocogoose';
+    color: #0B1C6A  ;
+    cursor: pointer;
+    margin-top: 40px;
+    width: 200px;
+    height: 80px;
+    padding-bottom:15px;    
+    padding-left:40px;
+    padding-right:40px;
+    background-color:#f1f2f3;
+    border-color: #d8d8d8;
+    border-width: 3px;
+    border-style: solid;
+    border-radius:35px;
+ }
+ .container2 figure button{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: 'Cocogoose';
+    color: #0B1C6A  ;
+    cursor: pointer;
+    margin-top: 10px;
+    width: 200px;
+    height: 80px;
+    padding-bottom:15px;    
+    padding-left:40px;
+    padding-right:40px;
+    background-color:#f1f2f3;
+    border-color: #d8d8d8;
+    border-width: 3px;
+    border-style: solid;
+    border-radius:35px;
+ }
+ .container3 figure button{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: 'Cocogoose';
+    color: #0B1C6A  ;
+    cursor: pointer;
+    margin-top: 10px;
+    width: 200px;
+    height: 80px;
+    padding-bottom:15px;    
+    padding-left:40px;
+    padding-right:40px;
+    background-color:#f1f2f3;
+    border-color: #d8d8d8;
+    border-width: 3px;
+    border-style: solid;
+    border-radius:35px;
+ }
+ .container4 figure button{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: 'Cocogoose';
+    color: #0B1C6A  ;
+    cursor: pointer;
+    margin-top: 40px;
+    width: 200px;
+    height: 80px;
+    padding-bottom:15px;    
+    padding-left:40px;
+    padding-right:40px;
+    background-color:#f1f2f3;
+    border-color: #d8d8d8;
+    border-width: 3px;
+    border-style: solid;
+    border-radius:35px;
+ }
+ .container5 figure button{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: 'Cocogoose';
+    color: #0B1C6A  ;
+    cursor: pointer;
+    margin-top: 10px;
+    width: 200px;
+    height: 80px;
+    padding-bottom:15px;    
+    padding-left:40px;
+    padding-right:40px;
+    background-color:#f1f2f3;
+    border-color: #d8d8d8;
+    border-width: 3px;
+    border-style: solid;
+    border-radius:35px;
+ }
+ .container6 figure button{
+    font-weight: 300;
+    font-size: 20px;
+    font-family: 'Cocogoose';
+    color: #0B1C6A  ;
+    cursor: pointer;
+    margin-top: 10px;
+    width: 200px;
+    height: 80px;
+    padding-bottom:15px;    
+    padding-left:40px;
+    padding-right:40px;
+    background-color:#f1f2f3;
+    border-color: #d8d8d8;
+    border-width: 3px;
+    border-style: solid;
+    border-radius:35px;
  }
 @media screen and (max-width=1200px){
     .box{
