--- a/estiloindex.css
+++ b/estiloindex.css
@@ -735,6 +735,9 @@ h2{
     justify-content: center;
     align-items: center;
 }
+.pie-pagina .grupo-1 .box figure h2{
+    margin-bottom: 10px;
+}
 .pie-pagina .grupo-1 .box figure img{
     width: 300px;
 }
@@ -756,20 +759,10 @@ h2{
     font-size: 20px;
     margin-bottom: 10px;
 }
-.pie-pagina .grupo-1 .red-social a{
-    display: inline-block;
-    text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
-    color: #fff;
-    margin-right: 10px;
-    background-color: #0d2033;
-    text-align: center;
-    transition: all 300ms ease;
-}
-.pie-pagina .grupo-1 .red-social a:hover{
-    color: rgb(0, 1, 7);
+
+
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
 }
 
 @media screen and (max-width:800px){
@@ -814,4 +807,3 @@ h2{
     margin: 5px;
    
 }
-
