--- a/bootstrap.css
+++ b/bootstrap.css
@@ -134,17 +134,10 @@ section {
   }
   
   .experiencia .columna:hover {
-    color: white;
-    background-color: #1b1b32;
-  }
+      box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+      transform: translateY(-3%);
+    }
   
-  .experiencia i {
-    font-size: 2.5rem;
-    color: #7ade30;
-    background-color: #0a0a23;
-    padding: 8px 19px;
-    border-radius: 50%;
-  }
   
   .experiencia-titulo {
     font-size: 25px;
@@ -160,63 +153,6 @@ section {
   
   .badge {
     margin: 5px;
-  }
-  
-  /* Proyectos */
-  
-  .proyectos-recientes {
-    padding: 40px;
-  }
-  
-  .proyectos-recientes img {
-    height: 100%;
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    display: block;
-    transition: all 0.2s ease;
-  }
-  
-  .proyectos-contenedor {
-    padding-top: 60px;
-    margin-bottom: 40px;
-  }
-  
-  .overlay {
-    transition: all 0.2s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  .overlay h2{
-    font-size: 10px;
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 0;
-  }
-  .overlay p {
-    font-size: 10px;
-    font-weight: bold;
-    margin-bottom: 0;
-  }
-  
-  .proyecto {
-    position: relative;
-  }
-  
-  .proyecto:hover img {
-    opacity: 0.2;
-  }
-  
-  .proyecto:hover .overlay {
-    opacity: 1;
-  }
-  
-  .overlay .iconos-contenedor {
-    display: flex;
   }
   
   /* Articulos */
@@ -275,7 +211,9 @@ section {
     .slider1{
       width: 0%;
     }
-    
+    .slide-track1{
+      width: 0%;
+    }
   }
   /* Contacto */
   
